--- a/Projet_JAVA/nbproject/project.properties
+++ b/Projet_JAVA/nbproject/project.properties
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=modele.Projet_JAVA
+main.class=controler.Testsql
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
