--- a/Projet_JAVA/nbproject/project.properties
+++ b/Projet_JAVA/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Projet_JAVA
+application.vendor=titig
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +27,20 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Projet_JAVA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jfreechart-1.5.0-javadoc.jar=C:\\Users\\titig\\Downloads\\jfreechart-1.5.0-javadoc.jar
+file.reference.jfreechart-1.5.0-sources.jar=C:\\Users\\titig\\Downloads\\jfreechart-1.5.0-sources.jar
+file.reference.jfreechart-1.5.0.jar=C:\\Users\\titig\\Downloads\\jfreechart-1.5.0.jar
 file.reference.mysql-connector-java-8.0.18.jar=..\\testsql\\testsql\\mysql-connector-java-8.0.18.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.18.jar}
+    ${file.reference.mysql-connector-java-8.0.18.jar}:\
+    ${file.reference.jfreechart-1.5.0.jar}:\
+    ${file.reference.jfreechart-1.5.0-javadoc.jar}:\
+    ${file.reference.jfreechart-1.5.0-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
