--- a/Projet_JAVA/nbproject/project.properties
+++ b/Projet_JAVA/nbproject/project.properties
@@ -30,11 +30,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jfreechart-1.5.0-javadoc.jar=C:\\Users\\titig\\Downloads\\jfreechart-1.5.0-javadoc.jar
-file.reference.jfreechart-1.5.0-javadoc.jar-1=C:\\Users\\Luka Carneiro\\source\\Downloads\\jfreechart-1.5.0-javadoc.jar
 file.reference.jfreechart-1.5.0-sources.jar=C:\\Users\\titig\\Downloads\\jfreechart-1.5.0-sources.jar
-file.reference.jfreechart-1.5.0-sources.jar-1=C:\\Users\\Luka Carneiro\\source\\Downloads\\jfreechart-1.5.0-sources.jar
 file.reference.jfreechart-1.5.0.jar=C:\\Users\\titig\\Downloads\\jfreechart-1.5.0.jar
-file.reference.jfreechart-1.5.0.jar-1=C:\\Users\\Luka Carneiro\\source\\Downloads\\jfreechart-1.5.0.jar
 file.reference.mysql-connector-java-8.0.18.jar=..\\testsql\\testsql\\mysql-connector-java-8.0.18.jar
 includes=**
 jar.compress=false
@@ -43,10 +40,7 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.18.jar}:\
     ${file.reference.jfreechart-1.5.0.jar}:\
     ${file.reference.jfreechart-1.5.0-javadoc.jar}:\
-    ${file.reference.jfreechart-1.5.0-sources.jar}:\
-    ${file.reference.jfreechart-1.5.0-javadoc.jar-1}:\
-    ${file.reference.jfreechart-1.5.0-sources.jar-1}:\
-    ${file.reference.jfreechart-1.5.0.jar-1}
+    ${file.reference.jfreechart-1.5.0-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
