--- a/Projet_JAVA/nbproject/private/private.properties
+++ b/Projet_JAVA/nbproject/private/private.properties
@@ -5,6 +5,6 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\titig\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Gautier PLANTE\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
 
 
