--- a/Projet_JAVA/nbproject/project.properties
+++ b/Projet_JAVA/nbproject/project.properties
@@ -29,8 +29,11 @@ dist.jar=${dist.dir}/Projet_JAVA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jfreechart-1.5.0-javadoc.jar=C:\\Users\\Luka Carneiro\\source\\Downloads\\jfreechart-1.5.0-javadoc.jar
 file.reference.jfreechart-1.5.0-sources.jar=C:\\Users\\Gautier PLANTE\\Downloads\\jfreechart-1.5.0-sources.jar
+file.reference.jfreechart-1.5.0-sources.jar-1=C:\\Users\\Luka Carneiro\\source\\Downloads\\jfreechart-1.5.0-sources.jar
 file.reference.jfreechart-1.5.0.jar=C:\\Users\\Gautier PLANTE\\Downloads\\jfreechart-1.5.0.jar
+file.reference.jfreechart-1.5.0.jar-1=C:\\Users\\Luka Carneiro\\source\\Downloads\\jfreechart-1.5.0.jar
 file.reference.mysql-connector-java-8.0.18.jar=..\\testsql\\testsql\\mysql-connector-java-8.0.18.jar
 includes=**
 jar.compress=false
@@ -38,7 +41,10 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mysql-connector-java-8.0.18.jar}:\
     ${file.reference.jfreechart-1.5.0-sources.jar}:\
-    ${file.reference.jfreechart-1.5.0.jar}
+    ${file.reference.jfreechart-1.5.0.jar}:\
+    ${file.reference.jfreechart-1.5.0-javadoc.jar}:\
+    ${file.reference.jfreechart-1.5.0-sources.jar-1}:\
+    ${file.reference.jfreechart-1.5.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
